pfstools 2.0.2 <06.03.2015>
	* fixed: Fixed build and install scripts for hdrhtml
	* fixed: Fixed building FFT solver for pfstmo_fattal02
	* updated: Updated some manual pages

pfstools 2.0.1 <07.01.2015>
	* added: new tone-mapping operator "pfstmo_ferradans11" (thanks to Sira)

pfstools 2.0.0 <06.12.2014>
	* added: Starting from pfstools 2.0.0, pfstmo and pfscalibration are included in the pfstools source package
	* changed: support for automake dropped in favour of cmake
	* fixed: pfsinpfm and pfsoutpfm now handle both big and little endian files correctly
	* fixed: pfsinpfm and pfsoutpfm do not flip images (top-bottom)
	* added: new tone-mapping operator: pfstmo_mai11
	* changed: Thoroughly updated README files
	* fixed: several issues with octave scripts (compatibility with newer Octave releases), in particular pfs_write_rgb

pfstools 1.9.0 <17.09.2014>
	* added: CMake build system (to replace automake in future releases)
	* changed: pfsinrgbe & pfsoutrgbe do not correct for Radiance WHITE_EFFICACY by default. Note that this makes absolute values stored in .hdr files using earlier pfstools version smaller then they should be. Check manual pages for pfsinrgbe.
	* added: pfsretime - simple frame duplication
	* added: pfscolortransform - color calibration
	* updated: pfsglview contains many improvement and multithreading (thanks to Oliver Barth)
	* updated: pfsview is multithreaded if openmp present
	* fixed: pfsindcraw uses sRGB rather than the native RGB color space. This should improve colors in HDR images merged from RAW.
	* fixed: bugs in pfsintiff
	* fixed: Building OSX app bundle for pfsview disabled by default (use --enable-osxapp to enable again)

pfstools 1.8.5 <21.10.2011>
	* fixed: pfsintiff normalizes 16-bit files to 0-1 range to maintain compatibility with pfscalibration and the rest of pfstools
	* fixed: when reading TIFF files, pfsin falls back to pfsinimgmagick if pfsintiff not found